spade-tests/src/snapshots/spade_tests__integration__trait_tests__anonymous_generic_traits_overlap_correctly_mentioned.snap
---
source: spade-tests/src/integration.rs
---
impl int<2> {
    fn x(self) {}
}

impl<#uint N> int<N> {
    fn x(self) {}
}


error: int<N> already has a method named x
  ┌─ testinput:6:5
  │
2 │     fn x(self) {}
  │     ------------- Previous definition here
  ·
6 │     fn x(self) {}
  │     ^^^^^^^^^^^^^ Duplicate method
